--- a/pageone.html
+++ b/pageone.html
@@ -141,7 +141,7 @@
 
              <div class="col">
 
-                <form action="https://api.web3forms.com/submit" method="POST">
+                <form action="https://api.web3forms.com/submit" method="POST" target="_blank">
                    <div class="form-control">
                        <div class="form-inputs">
                          <input type="hidden" name="access_key" value="b1d79083-6189-4205-b9a4-829292f13b25">
